--- a/index.html
+++ b/index.html
@@ -67,11 +67,13 @@
              <div id="login-status-container" class="flex items-center order-2 md:order-3"></div>
         </nav>
 
-        <!-- Header: Reduced title size on mobile -->
+        <!-- Header: Removed header text -->
+        <!--
         <header class="mb-6 max-w-7xl mx-auto">
             <h1 class="text-3xl sm:text-4xl font-extrabold text-gray-800 text-center">社区动态</h1>
             <p class="mt-1 sm:mt-2 text-base sm:text-lg text-gray-600 text-center">发现大家的精彩点评</p>
         </header>
+        -->
 
         <!-- Search and Sort Controls: Added max-width -->
         <div class="mb-6 bg-white p-3 sm:p-4 rounded-lg shadow-sm flex flex-col md:flex-row gap-3 sm:gap-4 items-center max-w-7xl mx-auto">
