--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
             div.innerHTML = `
                 <div class="aspect-[1179/1572] w-full overflow-hidden flex-shrink-0 relative">
                      ${isAdmin && isPinned ? `<div class="pinned-indicator" title="已置顶">${pinIconSvg} 置顶</div>` : ''}
-                     <!-- **MODIFIED**: Removed fixed widths, added w-1/4 h-auto, adjusted top/left -->
-                     ${isCertified ? `<img src="/Certifiedstamp.png${cacheBuster}" alt="Certified" class="absolute top-2 left-2 w-1/4 h-auto z-10" title="Pistacho 认证评分" onerror="handleStampError(this)">` : ''}
+                     <!-- **MODIFIED**: Changed w-1/4 to w-1/3 -->
+                     ${isCertified ? `<img src="/Certifiedstamp.png${cacheBuster}" alt="Certified" class="absolute top-2 left-2 w-1/3 h-auto z-10" title="Pistacho 认证评分" onerror="handleStampError(this)">` : ''}
                      ${coverImageUrl ? `<img src="/api/image/${coverImageUrl}" alt="${rating.cigarInfo?.name || '雪茄图片'}" class="w-full h-full object-cover">` : '<div class="w-full h-full bg-gray-200 flex items-center justify-center text-gray-400 text-sm">无图</div>'}
                 </div>
                 <div class="p-1.5 sm:p-2 flex-grow flex flex-col justify-between">
